# authorization-demo

./: .example.env  .gitignore  CLAUDE.md  README.md  compose.yml  go.mod  go.sum  main.go  main_enhanced.go
config/: abac_model.conf  abac_policy.csv  rbac_policy.csv
internal/auth/: service.go
internal/handler/: auth.go  casbin_policy.go  debug.go  policy.go  policy_admin.go  product.go  structured_policy.go
internal/infrastructure/: database.go  seed_data.go
internal/middleware/: auth.go  authentication.go  authorization.go
internal/model/: casbin_policy.go  customer.go  order.go  product.go  structured_policy.go  user.go
internal/service/: abac.go  authentication.go  authorization.go  casbin_policy_store.go  database.go  enhanced_authorization.go  policy_engine.go  policy_store.go  product.go  structured_policy_engine.go  user.go
scripts/: .flake8  README.md  pyproject.toml  sync_feature_spec.py
